--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ vendor/bundle
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
+/bin
 
 # Ignore uploaded files in development.
 /storage/*
@@ -29,3 +30,10 @@ vendor/bundle
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
