--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ vendor/bundle
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/config/database.yml
-
+/config/database.yml    
+node_modules/
